--- a/templates/nhahang.html
+++ b/templates/nhahang.html
@@ -2,7 +2,7 @@
 <html lang="en">
 {% include 'head.html' %}
 <body>
-    <img src="../static/image/chamhoi-icon-96.png" alt="" class="avatar mr-2">
+    <img src="../static/image/bot_icon.gif" alt="" class="avatar mr-2">
     <div class="bot-mess">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
@@ -213,7 +213,7 @@
     text-overflow: ellipsis;
 }
 .carousel-inner{
-background-color:rgb(250, 60, 76);
+background-color:#fed136;
 }
 </style>
 </body>
