--- a/templates/nhanghi.html
+++ b/templates/nhanghi.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../static/css/nhanghi.css">
 </head>
 <body>
-        <img src="../static/image/chamhoi-icon-96.png" alt="" class="avatar mr-2">
+        <img src="../static/image/bot_icon.gif" alt="" class="avatar mr-2">
 
         <div class="bot-mess page_detail">
                    <h2 style="text-align: center;"><span style="color:#0000FF;"><strong>1. Blue Moon – nhà nghỉ giá rẻ gần Quận Hoàn Kiếm, Hà Nội</strong></span></h2>
