--- a/templates/noigi.html
+++ b/templates/noigi.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-        <img src="../static/image/chamhoi-icon-96.png" alt="" class="avatar mr-2">
+        <img src="../static/image/bot_icon.gif" alt="" class="avatar mr-2">
         <div class="el"></div>
     <script>
     var path = '../static/image/tangai/',
