--- a/templates/health.html
+++ b/templates/health.html
@@ -38,16 +38,16 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
-              <a class="nav-link text-warning" href="#services">Services</a>
+              <a class="nav-link text-warning" href="{{url_for('index')}}">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-warning" href="#about">Sign In</a>
+              <a class="nav-link text-warning" href="{{url_for('login')}}">Sign In</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-warning" href="#team">Register</a>
+              <a class="nav-link text-warning" href="{{url_for('register')}}">Register</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-warning" href="#contact">Contact</a>
+              <a class="nav-link text-warning" href="https://www.facebook.com/groups/VSAxx/">Contact</a>
             </li>
           </ul>
         </div>
