--- a/templates/index.html
+++ b/templates/index.html
@@ -75,7 +75,7 @@
               <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Chăm Sóc Sức Khoẻ</h4>
-            <p class="text-muted">Bạn muốn tăng cân, giảm cân,.... </p>
+            <p class="text-muted">Bạn xấu không phải vì bạn béo. Nhưng nếu bạn muốn tốt cho sức khoẻ chúng tôi vẫn có thể giúp bạn. </p>
             </a>
           </div>
           <div class="col-md-4">
@@ -84,7 +84,7 @@
               <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Quản Lý Tài Chính</h4>
-            <p class="text-muted">Bạn không có tiền những vẫn muốn tiết kiệm ???</p>
+            <p class="text-muted">Vì thiếu kinh phí nên chưa hoàn thiện được nên chúng tôi cần các Shark đầu tư.</p>
           </div>
         </div>
       </div>
@@ -96,7 +96,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Our Amazing Team!</h2>
-            <h3 class="section-subheading text-muted">...</h3>
+            <h3 class="section-subheading text-muted">Những con người chói loá</h3>
           </div>
         </div>
         <div class="row">
@@ -104,7 +104,7 @@
             <ul class="timeline">
               <li>
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/1.jpg" alt="">
+                  <img class="rounded-circle img-fluid" src="../static/image/loc.jpg" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -112,46 +112,46 @@
                     <h4 class="subheading">Lộc Trần</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">...</p>
+                    <p class="text-muted">Lead Designer</p>
                   </div>
                 </div>
               </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/2.jpg" alt="">
+                  <img class="rounded-circle img-fluid" src="../static/image/sang.jpg" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
                     <h4 class="subheading">Sang Bùi</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">...</p>
+                    <p class="text-muted">Không đẹp trai lắm.</p>
                   </div>
                 </div>
               </li>
               <li>
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
+                  <img class="rounded-circle img-fluid" src="../static/image/nga.jpg" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
                     <h4 class="subheading">Nga Nguyễn</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">...</p>
+                    <p class="text-muted">Lead Marketer</p>
                   </div>
                 </div>
               </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
+                  <img class="rounded-circle img-fluid" src="../static/image/dat.jpg" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
                     <h4 class="subheading">Đạt Đẹp Trai</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Bưng bê phục vụ</p>
+                    <p class="text-muted">Đẹp trai nhưng chỉ làm bưng bê</p>
                   </div>
                 </div>
               </li>
@@ -264,7 +264,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Contact Us</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h3 class="section-subheading text-muted">Để cho đẹp thôi chứ chưa có kinh phí.</h3>
           </div>
         </div>
         <div class="row">
