--- a/templates/love.html
+++ b/templates/love.html
@@ -68,7 +68,7 @@
                             {% elif like == '2' %}
                                 Mua Sắm 
                             {% elif like == '3' %}
-                               Xoạc
+                               Địt Nhau
                             {% endif %}
                             <br>
                         {%endfor%}
@@ -129,9 +129,9 @@
                                 {%if like == '1'%}
                                 Nhà Hàng
                                 {%elif like == '2'%}
-                                Nhà Nghỉ
-                                {%elif like == '3'%}
                                 Siêu Thị
+                                {%elif like == '3'%}
+                                Nhà Nghỉ
                                 {%endif%}
                             {%endfor%}
                         {%endif%}
