--- a/templates/nhahang.html
+++ b/templates/nhahang.html
@@ -6,7 +6,7 @@
     <div class="bot-mess">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
-                <ul class="ldc-items-list ldc-column ng-scope" ng-if="Items.length>0" style="">
+                <ul class="ldc-items-list ldc-column ng-scope" ng-if="Items.length>0" >
                   <div class="carousel-item active">
                         <li class="ldc-item ng-scope" ng-repeat="item in Items">
                                 <div class="ldc-item-img" style="position: relative; bottom: 0;">
